--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
     <header class="container text-white">
       <h4 class="py-2">Wisdom Pet Medicine</h4>
     </header>
-  
+    
+    <div id="alternate" class="alternate">
+      <h4 class="alternate">Real Talk</h4>
+    </div>
     <div id="root"></div>    
 
     <footer class="container d-flex text-white py-2">
