--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     </header>
     
     <div id="alternate" class="alternate">
-      <h4 class="alternate">Real Talk</h4>
+      <h4 class="alternate">Dr. Villalobos</h4>
     </div>
     <div id="root"></div>    
 
