--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
     <header class="container text-white">
       <h4 class="py-2">Wisdom Pet Medicine</h4>
     </header>
-    
+  
     <div id="alternate" class="alternate">
-      <h4 class="alternate">Dr. Villalobos</h4>
+      <h4 class="alternate">Dr. Esteban Villalobos</h4>
     </div>
     <div id="root"></div>    
 
